[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/tools/graph_panels/terminal_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/tools/GraphEdit.gd" type="Script" id=2]
[ext_resource path="res://scenes/tools/graph_panels/notebook_graphnode.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="GraphEdit" type="GraphEdit" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 2933.0
margin_bottom = 1608.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_styles/bg = SubResource( 1 )
custom_colors/activity = Color( 0, 1, 0.462745, 1 )
custom_colors/grid_major = Color( 0.0392157, 0.231373, 0, 0.607843 )
custom_colors/grid_minor = Color( 0, 0.439216, 0.054902, 0.101961 )
right_disconnects = true
scroll_offset = Vector2( -466, -165 )
snap_distance = 20
use_snap = true
zoom = 1.0
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Custom Colors", "Custom Constants", "Custom Icons", "Custom Styles", "Focus", "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_icons", "custom_styles", "theme" ]

[node name="notebook_cell" parent="." index="0" instance=ExtResource( 3 )]
margin_left = 466.0
margin_top = 165.0
margin_right = 1013.0
margin_bottom = 535.0

[connection signal="connection_request" from="." to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="node_selected" from="." to="." method="_on_GraphEdit_node_selected"]
